Bugfix: jump to anchor element

--- a/app/css/holidayhome.css
+++ b/app/css/holidayhome.css
@@ -85,6 +85,10 @@ html,body {
 /* Featurettes
 ------------------------- */
 
+.featurette {
+    padding-top: 50px;
+}
+
 .featurette-divider {
     margin: 80px 0; /* Space out the Bootstrap <hr> more */
 }
